# ncvs_item

./: .env.example  .gitignore  BACS_Control.md  README.md  devices.json  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
backend/: .dockerignore  .env.local  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_scenarios.py  0003_health_status_rename.py  0004_add_port_phones.py  0005_cascade_device_fks.py  0006_remove_node_id.py  0007_add_scenario_id_to_test_sessions.py  0008_add_device_geo_fields.py  0009_add_pair_round_number.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/api/: auth.py  devices.py  health.py  matrix.py  scenarios.py  tests.py
backend/app/cli/: seed.py
backend/app/models/: __init__.py  bacs.py  health.py  lock.py  pair.py  scenario.py  session.py  user.py
backend/app/protocol/: constants.py  crosstest_proto.py  messages.py  tcp_messages.py  udp_client.py
backend/app/repositories/: __init__.py  device_repo.py  health_repo.py  lock_repo.py  pair_repo.py  scenario_repo.py  session_repo.py  user_repo.py
backend/app/schemas/: auth.py  device.py  health.py  pair.py  scenario.py  session.py
backend/app/services/: health_service.py  packet_log.py  session_service.py
backend/app/services/crosstest/: device_locker.py  runner.py  scheduler.py
backend/ncvs_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_concurrent_sessions.py  test_crosstest_flow.py  test_device_crud.py  test_endpoints.py  test_health_flow.py  test_seed.py  test_sse.py  test_tcp_crosstest.py  test_tcp_real.py  test_udp_heartbeat.py  test_udp_real.py
backend/tests/simulator/: fake_bacs.py  stub_crosstest.py
backend/tests/unit/: test_device_locker.py  test_messages.py  test_scheduler_pick.py  test_security.py  test_tcp_protocol.py  test_udp_client.py
bacs/: checker.py  loader.py  models.py  protocol.py  scheduler.py
docs/: BACS_Control.md  COPILOT_SKILLS.md  WINDOWS_PORTABLE_STRATEGY.md  bacs-ui-proposal.html
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: build-windows-package.sh  build.bat  requirements-windows.txt  setup.iss
tests/: test_checker.py  test_loader.py  test_models.py  (+2 more)
(+38 files in other folders)
